--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 </head>
 <body>
   <section id="hero" class="hero w-100 ">
-    <nav class="col-12 col-md-10 p-2 m-auto pt-4 animate__animated animate__backInDown d-flex">
+    <nav class="col-12 col-md-10  m-auto  animate__animated animate__backInDown d-flex">
       <div>
         <a href="#hero"><img src="./images/logo.svg" alt=""></a>
       </div>
